separate SharedFileGrant/SharedFolderGrant entities, only getFile made share-aware, everything mutating/listing stays owner-only (documented per call site)